# task-management-restfull-api

./: .coverage  .flake8  .gitignore  Dockerfile.dev  LICENSE  README.md  compose.yml  dev.env  project-plan.md  pyproject.toml
app/: __init__.py
app/models/: user.py
app/routes/: __init__.py  index.py  user.py
config/: config.py
ripi/.closed/Issue/implement_user_registration/: description.md
ripi/.closed/Issue/setup_flask_project/: description.md
ripi/.closed/Issue/write_license_file/: description.md
ripi/Issue/add_linting_and_testing_tools/: description.md
ripi/Issue/dockerize_flask_app_with_mongodb/: description.md
ripi/Issue/implement_config_directory/: description.md
ripi/Issue/implement_forgot_password/: description.md
ripi/Issue/implement_user_login/: description.md
ripi/Issue/implement_user_registration/: description.md
ripi/Issue/setup_flask_project/: description.md
ripi/Issue/write_development_plan/: description.md
ripi/Issue/write_readme/: description.md
tests/: conftest.py  test_config.py  test_forgot_password.py  test_index.py  test_user_login.py  test_user_model.py  test_user_registration.py
